k8s/post-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: post-db
spec:
  selector:
    matchLabels:
      app: post-db
  serviceName: post-db
  replicas: 1
  template:
    metadata:
      labels:
        app: post-db
    spec:
      containers:
        - name: post-db
          image: postgres:18-trixie
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: "standard-rwo"
        volumeMode: Filesystem


---
apiVersion: v1
kind: Service
metadata:
  name: post-db
spec:
  clusterIP: None
  selector:
    app: post-db
  ports:
    - port: 5432
      targetPort: 5432
